Recovery_email set on User object. Better unicode handling on password & username.
