# doc/api/swagger.json
@@ -215,9 +215,6 @@
                           "is_primary": {
                             "type": "boolean"
                           },
-                          "is_backup": {
-                            "type": "boolean"
-                          },
                           "label": {
                             "type": "string"
                           },
@@ -553,9 +550,17 @@
                 "privacy_index": {
                   "type": "integer",
                   "format": "int32"
+                },
+                "recovery_email": {
+                  "type": "string"
                 }
               },
-              "additionalProperties": false
+              "additionalProperties": false,
+              "required": [
+                "username",
+                "password",
+                "recovery_email"
+              ]
             }
           }
         }
@@ -598,9 +603,6 @@
                             "type": "string"
                           },
                           "is_primary": {
-                            "type": "boolean"
-                          },
-                          "is_backup": {
                             "type": "boolean"
                           },
                           "label": {
@@ -663,9 +665,17 @@
                 },
                 "password": {
                   "type": "string"
+                },
+                "recovery_email": {
+                  "type": "string"
                 }
               },
-              "additionalProperties": false
+              "additionalProperties": false,
+              "required": [
+                "username",
+                "password",
+                "recovery_email"
+              ]
             }
           }
         ],
@@ -793,9 +803,6 @@
                           "is_primary": {
                             "type": "boolean"
                           },
-                          "is_backup": {
-                            "type": "boolean"
-                          },
                           "label": {
                             "type": "string"
                           },
@@ -1131,9 +1138,17 @@
                 "privacy_index": {
                   "type": "integer",
                   "format": "int32"
+                },
+                "recovery_email": {
+                  "type": "string"
                 }
               },
-              "additionalProperties": false
+              "additionalProperties": false,
+              "required": [
+                "username",
+                "password",
+                "recovery_email"
+              ]
             }
           },
           "401": {
@@ -1396,9 +1411,6 @@
                               "type": "string"
                             },
                             "is_primary": {
-                              "type": "boolean"
-                            },
-                            "is_backup": {
                               "type": "boolean"
                             },
                             "label": {
@@ -1749,9 +1761,6 @@
                       "is_primary": {
                         "type": "boolean"
                       },
-                      "is_backup": {
-                        "type": "boolean"
-                      },
                       "label": {
                         "type": "string"
                       },
@@ -1928,9 +1937,6 @@
                         "type": "string"
                       },
                       "is_primary": {
-                        "type": "boolean"
-                      },
-                      "is_backup": {
                         "type": "boolean"
                       },
                       "label": {
@@ -2439,9 +2445,6 @@
                           "is_primary": {
                             "type": "boolean"
                           },
-                          "is_backup": {
-                            "type": "boolean"
-                          },
                           "label": {
                             "type": "string"
                           },
@@ -2816,9 +2819,6 @@
                         "type": "string"
                       },
                       "is_primary": {
-                        "type": "boolean"
-                      },
-                      "is_backup": {
                         "type": "boolean"
                       },
                       "label": {
@@ -3344,9 +3344,6 @@
                                   "is_primary": {
                                     "type": "boolean"
                                   },
-                                  "is_backup": {
-                                    "type": "boolean"
-                                  },
                                   "label": {
                                     "type": "string"
                                   },
@@ -3825,9 +3822,6 @@
                               "type": "string"
                             },
                             "is_primary": {
-                              "type": "boolean"
-                            },
-                            "is_backup": {
                               "type": "boolean"
                             },
                             "label": {
